--- a/package.json
+++ b/package.json
@@ -65,12 +65,15 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "apollo-boost": "^0.3.1",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
+    "graphql": "^14.3.0",
+    "graphql-tag": "^2.10.1",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
@@ -79,8 +82,10 @@
     "ip": "1.1.5",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "moment": "^2.24.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
+    "react-apollo": "^2.5.5",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
